--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,8 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Nunito",
-sans-serif;
+$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -16,3 +15,6 @@ $black: #000;
 // Heights
 $nav-height: 70px;
 $footer-height: 320px;
+
+// Transitions
+$transition_duration: 500ms;
