--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,14 +1,15 @@
 @import 'font';
 @import 'variables';
 @import 'elements';
+@import 'transitions';
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 p {
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -24,104 +25,104 @@ input,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 .w-100 {
-    width: 100%;
+  width: 100%;
 }
 
 .h-100 {
-    height: 100%;
+  height: 100%;
 }
 
 .scale {
-    @include scale-transition(1);
+  @include scale-transition(1);
 
-    &:hover {
-        @include scale-transition();
-    }
+  &:hover {
+    @include scale-transition();
+  }
 }
 
 // flexbox
 .disp-flex {
-    display: -webkit-flex;
-    display: flex;
+  display: -webkit-flex;
+  display: flex;
 
-    @media only screen and (max-width: 600px) {
-        -ms-flex-direction: column;
-        flex-direction: column;
-    }
+  @media only screen and (max-width: 600px) {
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
 
 .flex-center {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-space-evenly {
-    justify-content: space-evenly;
-    align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 // padding
 .p-2 {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .p-5 {
-    padding: 5em;
+  padding: 5em;
 }
 
 .p-5 {
-    padding: 5rem;
+  padding: 5rem;
 }
 
 .pt-2 {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .pb-2 {
-    padding-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 
 .p-t-5 {
-    padding-top: 5%;
+  padding-top: 5%;
 }
 
 .pb-5 {
-    padding-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 .pl-2 {
-    padding-left: 2rem;
+  padding-left: 2rem;
 }
 
 // margin
 .m-0 {
-    margin: 0;
+  margin: 0;
 }
 
 .m-3 {
-    margin: 3rem;
+  margin: 3rem;
 }
 
 .m-5 {
-    margin: 5rem;
+  margin: 5rem;
 }
 
 .mt-3 {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 .mt-5 {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
 .mb-5 {
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 }
 
 .mb-1 {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
