--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,7 +1,8 @@
-@import 'font';
 @import 'variables';
-@import 'elements';
+@import 'font';
+@import 'helpers';
 @import 'transitions';
+@import 'elements';
 
 * {
   margin: 0;
@@ -67,66 +68,4 @@ section {
 
 .center-block {
   margin: 0 auto;
-}
-
-// padding
-.p-2 {
-  padding: 2rem;
-}
-
-.p-5 {
-  padding: 5em;
-}
-
-.p-5 {
-  padding: 5rem;
-}
-
-.pt-2 {
-  padding-top: 2rem;
-}
-
-.pb-2 {
-  padding-bottom: 2rem;
-}
-
-.p-t-5 {
-  padding-top: 5%;
-}
-
-.pb-5 {
-  padding-bottom: 5rem;
-}
-
-.pl-2 {
-  padding-left: 2rem;
-}
-
-// margin
-.m-0 {
-  margin: 0;
-}
-
-.m-3 {
-  margin: 3rem;
-}
-
-.m-5 {
-  margin: 5rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.mt-5 {
-  margin-top: 5rem;
-}
-
-.mb-5 {
-  margin-bottom: 5rem;
-}
-
-.mb-1 {
-  padding-bottom: 1rem;
 }
