--- a/assets/sass/_elements.scss
+++ b/assets/sass/_elements.scss
@@ -5,14 +5,15 @@
 
 @mixin textInputStyle {
   padding: 10px;
-  border: 2px solid white;
+  border: 4px solid white;
   border-radius: 3px;
+  box-sizing: border-box;
   -webkit-box-shadow: 0px 10px 12px -7px $black;
   -moz-box-shadow: 0px 10px 12px -7px $black;
   box-shadow: 0px 10px 12px -7px $black;
   text-align: center;
   width: 200px;
-  @include scale-transition(1);
+  border-top: 1px solid lightgray;
 }
 
 @mixin activeLink {
@@ -56,18 +57,27 @@ button {
     @include scale-transition();
     cursor: pointer;
   }
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+  }
 }
 
 input {
   @include textInputStyle();
 
   &:focus {
-    @include scale-transition();
     outline: none;
+    border: 4px solid $blue;
   }
 
   &:hover {
-    cursor: pointer;
+    cursor: text;
   }
 }
 
@@ -81,12 +91,12 @@ textarea {
   @include textInputStyle();
 
   &:focus {
+    border: 4px solid $blue;
     text-align: initial;
-    @include scale-transition();
     outline: none;
   }
 
   &:hover {
-    cursor: pointer;
+    cursor: text;
   }
 }
