--- a/assets/sass/helpers.scss
+++ b/assets/sass/helpers.scss
@@ -8,11 +8,7 @@
 }
 
 .p-5 {
-  padding: 5em;
-}
-
-.p-5 {
-  padding: 5rem;
+  padding: 5%;
 }
 
 .pt-2 {
@@ -29,6 +25,10 @@
 
 .pb-5 {
   padding-bottom: 5rem;
+}
+
+.pl-1 {
+  padding-left: 1rem;
 }
 
 .pl-2 {
@@ -61,9 +61,9 @@
 }
 
 .mb-1 {
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .ml-1 {
-  padding-left: 1rem;
+  margin-left: 1rem;
 }
