--- a/assets/sass/helpers.scss
+++ b/assets/sass/helpers.scss
@@ -1,73 +1,23 @@
-// padding
-.p-1 {
-  padding: 1rem;
-}
+$sides: (
+  "t": "top",
+  "r": "right",
+  "b": "bottom",
+  "l": "left",
+);
 
-.p-2 {
-  padding: 2rem;
-}
-
-.p-5 {
-  padding: 5%;
-}
-
-.pt-2 {
-  padding-top: 2rem;
-}
-
-.pb-2 {
-  padding-bottom: 2rem;
-}
-
-.p-t-5 {
-  padding-top: 5%;
-}
-
-.pb-5 {
-  padding-bottom: 5rem;
-}
-
-.pl-1 {
-  padding-left: 1rem;
-}
-
-.pl-2 {
-  padding-left: 2rem;
-}
-
-// margin
-.m-0 {
-  margin: 0;
-}
-
-.m-3 {
-  margin: 3rem;
-}
-
-.m-5 {
-  margin: 5rem;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.mt-5 {
-  margin-top: 5rem;
-}
-
-.mb-5 {
-  margin-bottom: 5rem;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.ml-1 {
-  margin-left: 1rem;
+@for $i from 1 through 5 {
+  .p-#{$i} {
+    padding: #{$i}rem;
+  }
+  .m-#{$i} {
+    margin: #{$i}rem;
+  }
+  @each $s, $side in $sides {
+    .p#{$s}-#{$i} {
+      padding-#{$side}: #{$i}rem;
+    }
+    .m#{$s}-#{$i} {
+      margin-#{$side}: #{$i}rem;
+    }
+  }
 }
